@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 Please send Guile bug reports to bug-guile@prep.ai.mit.edu.
 
+
+** A new procedure primitive-exit can be used to terminate the current
+process without unwinding the Scheme stack.  This would usually be used
+after a fork.
+
 Changes in Guile 1.2:
 
 * Changes to the distribution
@@ -427,9 +432,13 @@ strings with different quoting conventions (an ungainly and confusing
 extension when implemented in other languages), we must adhere to this
 cumbersome escape syntax.
 
-** Changes to system call interfaces:
+* Changes to the gh_ interface
 
-*** The value returned by `raise' is now unspecified.  It throws an exception
+* Changes to the scm_ interface
+
+* Changes to system call interfaces:
+
+** The value returned by `raise' is now unspecified.  It throws an exception
 if an error occurs.
 
 *** A new procedure `sigaction' can be used to install signal handlers
